[tool.poetry]
name = "Byomkesh"
version = "0.1.0"
description = "Twitter OSINT tool"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.15.2"
tweepy = "^4.12.1"
textblob = "^0.17.1"
plotly = "^5.11.0"
aiohttp = "^3.8.3"
pycountry = "^22.3.5"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
