[tool.poetry]
name = "Byomkesh"
version = "0.1.0"
description = "Twitter OSINT tool"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.26.0"
textblob = "^0.17.1"
tweepy = "^4.14.0"
python-whois = "^0.8.0"
plotly = "^5.16.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
